# isohyps

./: .gitignore  README.md  analysis_helpers.py  analyzer.py  pyproject.toml  requirements.txt  rlm_cli.py  rlm_runtime.py  test_analyzer.py  test_rlm_runtime.py
.serena/: project.yml
doc/: CURRENT_PLAN.md
isohyps/: __init__.py  analysis_helpers.py  machine_analysis.py  project_analysis.py  rlm_runtime.py
issues/: directory_map_integration.md  rlm_refactoring_task_breakdown.md  rlm_refactoring_tasks.md
issues/review_chunks/: 01-controller-default-runtime.md  02-child-query-contract.md  03-repl-helpers-and-observability.md  04-analysis-docs-contract.md  05-test-migration.md  06-readme-and-ops-docs.md  README.md
prototypes/: compat_prototype.py  coverage_stale_prototype.py  dependency_graph_prototype.py  machine_prototype.py  rlm_prototype.py
tests/: __init__.py  test_analyzer.py  test_analyzer_runtime.py  test_machine_analysis.py  test_project_analysis.py  test_repo_map.py  test_rlm_cli.py  test_rlm_runtime.py  test_utils.py
