[project]
name = "isohyps"
version = "0.1.0"
description = "Recursive Language Model based project analyzer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai",
    "ollama",
    "python-dotenv",
]

[project.optional-dependencies]
symbols = [
    "tree-sitter>=0.21.0,<0.22; python_version < '3.12'",
    "tree-sitter-languages; python_version < '3.12'",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
]

[tool.uv]
package = false
