[project]
name = "isohyps"
version = "0.1.0"
description = "Recursive Language Model based project analyzer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai",
    "ollama",
    "python-dotenv",
]

[project.optional-dependencies]
symbols = [
    "tree-sitter>=0.21.0,<0.22",
    "tree-sitter-languages",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
]

[tool.uv]
package = false
